--- a/config_sample.env
+++ b/config_sample.env
@@ -1,16 +1,16 @@
 
 # REQUIRED CONFIG
 BOT_TOKEN = ""                              # Require restart after changing it while bot running
-OWNER_ID = "7654385403"                               # Require restart after changing it while bot running
-TELEGRAM_API = "29245477"                           # Require restart after changing it while bot running
-TELEGRAM_HASH = "0abc83883262245c90ca337b7a0375c4"                          # Require restart after changing it while bot running
+OWNER_ID = ""                               # Require restart after changing it while bot running
+TELEGRAM_API = ""                           # Require restart after changing it while bot running
+TELEGRAM_HASH = ""                          # Require restart after changing it while bot running
 
 # OPTIONAL CONFIG
 USER_SESSION_STRING = ""                    # Require restart after changing it while bot running
 DATABASE_URL = ""                           # Require restart after changing it while bot running
 DOWNLOAD_DIR = "/usr/src/app/downloads/"    # Require restart after changing it while bot running
 CMD_SUFFIX = ""                             # Require restart after changing it while bot running
-AUTHORIZED_CHATS = "-1002380726940"                       # Require restart after changing it while bot running
+AUTHORIZED_CHATS = ""                       # Require restart after changing it while bot running
 SUDO_USERS = ""                             # Require restart after changing it while bot running
 BLACKLIST_USERS = ""                        # Require restart after changing it while bot running
 STATUS_LIMIT = "4"
@@ -70,12 +70,11 @@ MIRROR_FILENAME_SUFFIX = ""
 MIRROR_FILENAME_REMNAME = ""
 
 # Log Channel/SuperGroup (Topics Support)
-LEECH_LOG_ID = "-1002380726940"
-MIRROR_LOG_ID = "-1002380726940"
-LINKS_LOG_ID = "-1002380726940"
+LEECH_LOG_ID = ""
+MIRROR_LOG_ID = ""
+LINKS_LOG_ID = ""
 
-# qBittorrent/Aria2c
-TORRENT_TIMEOUT = ""
+# qBittorrent/ArIMEOUT = ""
 BASE_URL = ""
 BASE_URL_PORT = ""
 WEB_PINCODE = "False"
